--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div fxFlexFill fxLayout="column">
+  <div>
+    <app-toolbar *ngIf="isLoggedIn"></app-toolbar>
+  </div>
+  <div fxFlex>
+    <router-outlet></router-outlet>
+  </div>
+</div>
