small fix on torrent download speed

--- a/src/app/core/toolbar/toolbar.component.html
+++ b/src/app/core/toolbar/toolbar.component.html
@@ -46,7 +46,7 @@
           <span>{{ movie.downloaded.downloadedAmount.toFixed(1) }}%</span>
           <span
             >Speed:
-            {{ (movie.downloaded.downloadSpeed / 1000000).toFixed(1) }}
+            {{ movie.downloaded.downloadSpeed }}
             Mb/s</span
           >
         </div>
