--- a/src/app/core/toolbar/toolbar.component.html
+++ b/src/app/core/toolbar/toolbar.component.html
@@ -47,8 +47,7 @@
           <span
             >Speed:
             {{ movie.downloaded.downloadSpeed }}
-            Mb/s</span
-          >
+          </span>
         </div>
         <a
           mat-raised-button
